# aegra

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  aegra.json  alembic.ini  auth.py  docker-compose.yml  langgraph.json  main.py  pyproject.toml  run_server.py  start-aegra.sh  test_api.py  test_background_run_join.py  test_chat_streaming.py  test_history_endpoint.py  test_sdk_integration.py  test_simple_history.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  20250817160000_initial_schema.py  20250817172544_initial_schema.py  5b9899f25eed_test_migration.py
deployments/docker/: Dockerfile
docs/: README.md  developer-guide.md  migration-cheatsheet.md
e2e/: __init__.py  _utils.py  test_background_run_join.py  test_chat_streaming.py  test_history_endpoint.py  test_runs.py  test_store.py
graphs/: chat_agent.py  chat_agent_shared.py  weather_agent.py
graphs/react_agent/: __init__.py  configuration.py  graph.py  tools.py
scripts/: migrate.py
src/: __init__.py
src/agent_server/: __init__.py  constants.py  main.py
src/agent_server/api/: __init__.py  assistants.py  runs.py  store.py  threads.py
src/agent_server/core/: auth_ctx.py  auth_deps.py  auth_middleware.py  database.py  health.py  orm.py  sse.py
src/agent_server/models/: __init__.py  assistants.py  auth.py  errors.py  runs.py  store.py  threads.py
src/agent_server/services/: broker.py  event_store.py  langgraph_service.py  streaming_service.py
src/agent_server/utils/: assistants.py
tests/: test_threads_history.py
tests/utils/: test_helpers.py
