[project]
name = "agent-protocol-server"
version = "0.1.0"
description = "Agent Protocol Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "firebase-admin>=7.0.0",
    "greenlet>=3.2.3",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.3",
    "langchain>=0.3.0",
    "langgraph-checkpoint-postgres>=2.0.23",
    "psycopg[binary]>=3.2.9",
    "pydantic>=2.11.7",
    "pyjwt>=2.10.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]
